--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "dependencies": {
     "concurrently": "^8.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-locals": "^1.0.2",
